--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "fung7890.github.io",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://fung7890.github.io/fung7890.github.io",
