--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "fung7890.github.io",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://fung7890.github.io/fung7890.github.io",
-
+  "homepage": "http://fung7890.github.io/portfolio",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
