--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://fung7890.github.io/portfolio",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
